src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/GLXSGIXSwapBarrier_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/GLXSGIXSwapBarrier_StringErrorContext.class */
public final class GLXSGIXSwapBarrier_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glXBindSwapBarrierSGIX(JJI)V", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIXSwapBarrierErrorContext");
        methods.put("nglXQueryMaxSwapBarriersSGIX(JIJ)I", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIXSwapBarrierErrorContext");
        methods.put("glXQueryMaxSwapBarriersSGIX(JILjava/nio/IntBuffer;)Z", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIXSwapBarrierErrorContext");
        methods.put("glXQueryMaxSwapBarriersSGIX(JI[I)Z", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIXSwapBarrierErrorContext");
        return methods;
    }
}
